2007-08-26  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b34)

	* Fixed NPE while drawing the cropped area when using golden section.

2007-08-08  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b33)

	* Added horizontal scrollbar for albums list (thanks Brian Egge).
	* Fixed NPE when User-Agent is not provided by Gallery (thanks Brian Egge).
	* Reworked New Album dialog (thanks Brian Egge).
	* Fixed permissions on .GalleryRemote folder on Unix (thanks Brian Egge).
	* Added ability to set caption based on EXIF createdate
	  (thanks Oliver May).

2007-06-01  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b32)

	* Fixed detection of ImageMagick and jpegtran when running
	  from a stripped Jar.
	* Removed enabling beta support for OpenGL when starting GR,
	  it was causing some video drivers to crash.
	* Fixed URL to Codex when IM or jpegtran is missing.
	* Added signature for some of the Jars so they can be started
	  by WebStart and still have full permissions.
	* Added ability to pre-set Gallery to a specific URL by passing
	  the command-line parameters -url <url> and -username <username>.
	* Added support for golden section (in addition to rule of thirds)
	  for cropping.
	* Fixed slideshow issue when transitions are disabled (the wrong
	  image would be shown).

2007-02-14  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b31)

	* Fixed missing string for slideshow preferences.
	* Added Italian translation (thanks Ermanno Baschiera!)
	* New certificate for applets.

2006-12-05  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b30)

	* Added ability to display the name of the album in slideshow.
	* Fixed sending cookies when requesting thumbnails.

2006-11-29  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b29)

	* Fixed applets not running on Opera.
	* The patch distribution shouldn't overwrite the im and
	  jpegtran properties files.
	* Fixed NPE in HTTPClient when authToken is not available.

2006-11-19  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b28)
